<resources>
    <string name="app_name">CTB Merchant</string>
    <string name="get_started_text">Get Started</string>
    <string name="next_text">Next</string>
    <string name="skip_text">Skip</string>
    <string name="onboarding_heading_text1">Welcome to CTB Merchant</string>
    <string name="onboarding_heading_text2">Transform your space with ease</string>
    <string name="onboarding_heading_text3">Information</string>
    <string name="onboarding_subtitle_text1">Giving the best e-commerce experience, Delivering quality and reliability in one</string>
    <string name="onboarding_subtitle_text2">Get a seamless e-commerce Experience Explore innovative e-commerce solution, Error-free and easy accessibility</string>
    <string name="onboarding_subtitle_text3">Your ultimate online shopping destination, Revolutionizing the way you shop where convenience meets affordability, Experience the difference in e-commerce</string>
    <string name="sign_in_text">Sign In</string>
    <string name="sign_up_text">Sign UP</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="account">Account</string>
    <string name="orders">Orders</string>
    <string name="myOrders">My Orders</string>
    <string name="product">Products</string>
    <string name="addProduct">Add Product</string>
    <string name="status">Open</string>
    <string name="today">Today</string>
    <string name="payment_history">Payment History</string>
    <string name="order_text">Orders(11)</string>
    <string name="order1_text">You have received total 13 orders today</string>
    <string name="not_user">Not a user? Register</string>
    <string name="user">Already hav ean account? Sing In</string>
    <string name="sign_with_otp">Sign in with OTP</string>
    <string name="forget_password">Forget Password</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mobile">Mobile Number</string>
    <string name="aggregatorProduct">Aggregator Products*</string>
    <string name="category">Category*</string>
    <string name="subCategory">Sub-Category*</string>
    <string name="foodType">Food Type*</string>
    <string name="mall">Mall*</string>
    <string name="attributeName">Attribute Name*</string>
    <string name="sellingPrice">Selling Price*</string>
    <string name="actualPrice">Actual Price*</string>
    <string name="description">Description</string>
    <string name="productTitle">Product Title*</string>
    <string name="productDescription">Product Description</string>
    <string name="price">Price*</string>
    <string name="mrp">MRP*</string>
    <string name="packingCharges">Packing Charges*</string>
    <string name="weight">Weight in KG*</string>
    <string name="gst">GST*</string>
    <string name="totalStock">Total Stock*</string>
    <string name="freeDelivery">Free Delivery</string>
    <string name="cancellationPolicy">Cancellation Policy</string>
    <string name="exchangePolicy">Exchange Policy</string>
    <string name="productImage">Product Image*</string>
    <string name="save">Save</string>
    <string name="imageWarning">Upload JPG, JPEG or PNG image </string>
    <string name="imageNote">Note: Product image must not be more than 5 MB </string>
    <string name="searchText">Search here...</string>
    <string name="full_name">Full Name</string>
    <string name="continue_text">Continue</string>
    <string name="register_text">Register</string>
    <string name="login_text">Login</string>
    <string name="aggregator_text">Aggregator</string>
    <string name="merchant_text">Merchant</string>
    <string name="agree">I agree to the</string>
    <string name="tc">T&amp;C </string>
    <string name="policy">Privacy Policy</string>
    <string name="and">and </string>
    <string name="edit">Edit </string>
    <string name="logout">Logout </string>
    <string name="profile">Profile </string>
    <string name="accountSetting">Account Setting </string>
    <string name="loginSecurity">Login and Security </string>
    <string name="paymentHistory">Payment History </string>
    <string name="termsConditions">Terms and Conditions </string>
    <string name="privacyPolicy">Privacy Policy </string>
    <string name="customerSupport">Customer Support </string>
    <string name="servicePlans">Service Plans </string>
    <string name="add">Add </string>
    <string name="gallery">Choose from Gallery </string>
    <string name="camera">Take Photo </string>

    <string-array name="aggregator_product_items">
        <item>Select Product</item>
        <item>Burger</item>
        <item>Mobile Accessories</item>
        <item>Grocery</item>
        <item>Mens Cloth</item>
        <item>Pizza</item>
    </string-array>

    <string-array name="category_items">
        <item>Select Category</item>
        <item>Food</item>
        <item>Food Court</item>
        <item>Grocery</item>
        <item>Electronics</item>
        <item>Fashion</item>
    </string-array>

    <string-array name="sub_category_items">
        <item>Select Sub Category</item>
        <item>Chicken Biryani</item>
        <item>Pizza</item>
        <item>Burger</item>
        <item>Potato</item>
        <item>Veg Biryani</item>
    </string-array>

    <string-array name="food_type">
        <item>Select Food Type</item>
        <item>Veg</item>
        <item>Non Veg</item>
    </string-array>



</resources>