<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/app_logo"
        android:scaleType="centerInside" />

    <TextView
        android:id="@+id/sign_in_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_text"
        android:textSize="24sp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/app_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="24dp" />


    <LinearLayout
        android:id="@+id/merchant_aggregator_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/sign_in_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp">


        <LinearLayout
            android:id="@+id/btn_merchant"
            android:layout_width="140dp"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:background="@drawable/selector_border"
            android:padding="10dp"
            android:gravity="center"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:layout_marginEnd="20dp"
            android:clickable="true"
            android:focusable="true" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/merchant_text"
                android:textSize="16sp"
                android:fontFamily="@font/montserrat_medium"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/btn_aggregator"
            android:layout_width="140dp"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:background="@drawable/selector_border"
            android:padding="10dp"
            android:gravity="center"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:layout_marginEnd="20dp"
            android:clickable="true"
            android:focusable="true" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/aggregator_text"
            android:textSize="16sp"
            android:fontFamily="@font/montserrat_medium"/>

    </LinearLayout>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/merchant_aggregator_options"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="14sp"
        android:fontFamily="@font/montserrat_medium"
        app:errorEnabled="false"
        android:hint="@string/mobile">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mobile_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLength="10"
            android:textColorHint="@android:color/darker_gray"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textSize="14sp"
        android:fontFamily="@font/montserrat_medium"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@id/text1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColorHint="@android:color/darker_gray"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/sign_in_with_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_with_otp"
        android:textSize="16sp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/text2"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="12dp" />

    <LinearLayout
        android:id="@+id/terms_and_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/sign_in_with_otp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp">

        <CheckBox
            android:id="@+id/agree_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agree"
            android:textSize="14sp"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/terms_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tc"
            android:textSize="14sp"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/colorPrimary"
            android:clickable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/and"
            android:textSize="14sp"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/privacy_policy_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/policy"
            android:textSize="14sp"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@android:color/holo_red_dark"
            android:clickable="true" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        android:textSize="16sp"
        android:fontFamily="@font/montserrat_medium"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/terms_and_conditions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:enabled="true"/>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textSize="16sp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/btn_continue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_user"
        android:textSize="16sp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@id/forgot_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
