<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".fragments.HomeFragment">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/shadow_toolbar_bg"
        android:elevation="2dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@android:color/white">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/app_logo" />

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/home"
            android:textColor="@color/colorText"
            android:textSize="20sp" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/shop_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/container_bg"
        android:elevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="14dp">

            <LinearLayout
                android:id="@+id/img"
                android:layout_width="110dp"
                android:layout_height="100dp"
                android:background="@drawable/skip_button_background">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/app_logo" />
            </LinearLayout>

            <TextView
                android:id="@+id/shop_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@id/img"
                android:fontFamily="@font/montserrat_semi_bold"
                android:text="@string/app_name"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/shop_status_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/shop_name_text"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/img"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/status"
                android:textColor="@color/colorGreen"
                android:textSize="16sp" />

            <Switch
                android:id="@+id/status_switch"
                android:layout_width="120dp"
                android:track="@drawable/switch_bg"
                android:thumb="@drawable/switch_selector"
                android:layout_height="40dp"

                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/shop_name_text"
                />




        </RelativeLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/order_card"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/container_bg"
        android:elevation="2dp"
        android:padding="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shop_card">

        <TextView
            android:id="@+id/order_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/order_text"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/order1_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/order1_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/order_img"
            app:layout_constraintStart_toStartOf="@id/order_text"
            app:layout_constraintTop_toBottomOf="@id/order_text" />

        <Button
            android:id="@+id/order_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorSecondary"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/today"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/order_img"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/orders"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/order_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/payment_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/payment_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order_card" />
</androidx.constraintlayout.widget.ConstraintLayout>
