<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.OnBoardingScreen">


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/indicator_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/indicator_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/button_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewPager" />


    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">


        <LinearLayout
            android:id="@+id/btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/skip_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_semi_bold"
                android:gravity="center"
                android:text="@string/skip_text"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_semi_bold"
                android:gravity="center"
                android:text="@string/next_text"
                android:textColor="@color/colorText"
                android:textSize="16sp" />


        </LinearLayout>


        <Button
            android:id="@+id/get_started_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/get_started_text"
            android:textColor="@color/colorBackground"
            android:visibility="gone" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
